--- a/storyline.html
+++ b/storyline.html
@@ -34,7 +34,7 @@
             <div class="location">
                 <iframe allowfullscreen="" loading="lazy"
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27137.719458346334!2d35.35770200921143!3d46.84483016548467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e6e81025d73b3d%3A0x5f61e6467b3e79c1!2sMelitopol%2C%20Zaporizhzhia%20Oblast%2C%20Ukraine!5e0!3m2!1sen!2sus!4v1696957984567!5m2!1sen!2sus"></iframe>
-                <h5>My home city Melitopol</h5>
+                <figcaption>My home city Melitopol</figcaption>
             </div>
 
             <p>
@@ -77,7 +77,7 @@
             <figure class="storylineImg">
                 <img src="images/school.jpg" alt="img">
 
-                <h5>School №15 of Melitopol city</h5>
+                <figcaption>School №15 of Melitopol city</figcaption>
             </figure>
             <p>
                 In 2009, I embarked on an exciting new chapter in my life as I entered my first year at School Number 15
@@ -109,7 +109,7 @@
             <figure class="storylineImg">
                 <img src="images/box2.jpg" alt="img">
 
-                <h5>Me during one of the training sessions</h5>
+                <figcaption>Me during one of the training sessions</figcaption>
             </figure>
             <p>
                 In 2012, I discovered my passion for boxing, a hobby that would define the next eight years of my life.
@@ -147,7 +147,7 @@
             <div class="location">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27174.05609062684!2d35.0973352332916!3d47.84841916293629!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40e14e31b42f02c5%3A0xa5f517d1452a2707!2sZaporizhzhia%2C%20Zaporizhzhia%20Oblast%2C%20Ukraine!5e0!3m2!1sen!2sus!4v1696961816582!5m2!1sen!2sus&z=12"></iframe>
-                <h5>Place of Regional Ecology Olympiad</h5>
+                <figcaption>Place of Regional Ecology Olympiad</figcaption>
             </div>
             <p>
                 In 2014, I took my first steps into the world of science competitions, focusing primarily on math while
@@ -173,12 +173,12 @@
             <div class="location">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d27160.05231216056!2d30.45005404329448!3d50.44831968567753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4cfc8be70a6fd%3A0x707e34b45c3a82fb!2sNational%20Technical%20University%20of%20Ukraine%20%E2%80%93%20Kyiv%20Polytechnic%20Institute!5e0!3m2!1sen!2sus!4v1696962453780!5m2!1sen!2sus&z=15"></iframe>
-                <h5>National Technical University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”:</h5>
+                <figcaption>National Technical University of Ukraine “Igor Sikorsky Kyiv Polytechnic Institute”:</figcaption>
             </div>
 
             <figure class="storylineImg">
                 <img src="images/mendeleev.JPG" alt="img">
-                <h5>Statue of Dmitriy Mendeleev, one of the fathers of chemistry and KPIs</h5>
+                <figcaption>Statue of Dmitriy Mendeleev, one of the fathers of chemistry and KPIs</figcaption>
             </figure>
             <p>
                 In 2020, I took a major step in my academic career by beginning my studies at the Kyiv Polytechnic
@@ -228,13 +228,11 @@
             <div class="location">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10377.775336219533!2d-7.112320384508118!3d52.26328068147424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x485b0fc42c07b7ef%3A0x370fb2f7ea6cc9f1!2sSETU%20Waterford!5e0!3m2!1sen!2sus!4v1696963012345!5m2!1sen!2sus&z=15"></iframe>
-                <h5>Location:</h5>
+                <figcaption>SETU Waterford</figcaption>
             </div>
 
             <figure class="storylineImg">
                 <img src="images/SETU_Ireland_logo.png" alt="img">
-
-                <h5>namename</h5>
             </figure>
             <p>
                 In 2024, I discovered my true passion for computer science and decided to pursue a bachelor’s degree in
